<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pager_activity"/>
    <Button
        android:id="@+id/button_horizontal_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal_scroll_activity"/>
    <Button
        android:id="@+id/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_activity"/>
    <Button
        android:id="@+id/button_text_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_patter_activity"/>


</LinearLayout>
